--- a/api/Gemfile
+++ b/api/Gemfile
@@ -16,6 +16,8 @@ gem 'redis', '~> 4.0'
 gem 'jwt'
 gem 'bcrypt'
 gem 'bootsnap', '>= 1.1.0', require: false
+gem 'devise'
+gem 'rack-cors'
 
 group :development, :test do
   gem 'byebug', platforms: [:mri, :mingw, :x64_mingw]
